case study writing ✏️

--- a/idm241/case-study.html
+++ b/idm241/case-study.html
@@ -25,6 +25,21 @@
             <p>Pictured above are two spaces where I chose to improve on. The first is the “saving” state of the button. From the jump, I planned to completely remove this state. The “saving” state of this button is unnecessary because it causes the user to wait longer than needed for a quick action. The second area of improvement was the star rating. Once the user selects a rating, there is no way of going back and removing their rating. I decided to add a way for the user to remove their rating in my design. This will give the user confidence in their actions, knowing that they can take their action back.</p>
             <p>The results reflect my goal of creating a functional, user-friendly interface while adhering to best practices in user experience design. By exploring these key components, I gained valuable insights into the intricacies of designing intuitive and functional interactions. This project showed not only the technical aspects behind microinteractions but also the reasoning behind each design decision.</p>
             <h2>Process and Insight</h2>
+            <p>As mentioned earlier, I chose to analyze and improve on a book tile from the Goodreads recommendations page. The next step was the alpha description. In this, I focused on one existing button (the “Want to Read” button) and dove into analyzing and describing its triggers, rules, feedback, loops, and modes. I was introduced to understanding how complex a single interactive element could be, even if it looked simple on the surface.
+            </p>
+            <div class="button">
+                <a href="alpha.html">Check out my Alpha Description!</a>
+            </div>
+            <p>After the Alpha Description, I moved on to the Alpha Build. In this phase, I coded the “Want to Read” button and its interactions. This was my first time coding a microinteraction, and I learned a lot about the intricacies of coding a single element. I used HTML and CSS to create a button that changes color when hovered over and clicked. I also applied JavaScript to change the text of the button when clicked. This was a challenging but rewarding experience that taught me a lot about the technical side of microinteractions.</p>
+            <div class="button">
+                <a href="alpha/build.html">Check out my Alpha Build!</a>
+            </div>
+            <p>After finishing the Alpha portion of my project I started to plan what my improvements would look like. My goal was to create a functional, user-friendly interface. The Goodreads website already has a brand with good color contrast, so I decided to maintain the branding. I extracted their design system from their page and built a design system.</p>
+            <img src="design-system.png" alt="Design System" width="440px">
+            <p>After the Alpha Build, I moved on to the Beta Description. In this phase, I analyzed and described the “Want to Read” button&apos;s feedback and loops. I also ideated improvements for the button, such as removing the “saving” state and a way to remove the rating. This phase was crucial in understanding the importance of feedback and loops in microinteractions. I learned that feedback is essential for guiding users through an interface and that loops are necessary for creating a seamless user experience.</p>
+            <!--<div class="button">
+                <a href="https://www.figma.com/design/1djld8EU1RcqD4BB89qBuG/IDM241--Goodreads-Microinteractions?node-id=18-3&t=P6eJkudlI5RW4xiH-1">Check out my Figma Prototype!</a>
+                -->
             <h2>The Solution</h2>
             <h2>The Results</h2>
             <!--<h2>The Reflection</h2>-->
