--- a/idm241/case-study.html
+++ b/idm241/case-study.html
@@ -36,11 +36,33 @@
             </div>
             <p>After finishing the Alpha portion of my project I started to plan what my improvements would look like. My goal was to create a functional, user-friendly interface. The Goodreads website already has a brand with good color contrast, so I decided to maintain the branding. I extracted their design system from their page and built a design system.</p>
             <img src="design-system.png" alt="Design System" width="440px">
-            <p>After the Alpha Build, I moved on to the Beta Description. In this phase, I analyzed and described the “Want to Read” button&apos;s feedback and loops. I also ideated improvements for the button, such as removing the “saving” state and a way to remove the rating. This phase was crucial in understanding the importance of feedback and loops in microinteractions. I learned that feedback is essential for guiding users through an interface and that loops are necessary for creating a seamless user experience.</p>
-            <!--<div class="button">
+            <p>After the Alpha Build, I moved on to the Beta Description. In this phase, I analyzed and described the “Want to Read” button, star rating, and "Not Interested" button&apos;s feedback and loops. I also ideated improvements for the button, such as removing the “saving” state and a way to remove the rating. This phase was crucial in understanding the importance of feedback and loops in microinteractions. I learned that feedback is essential for guiding users through an interface and that loops are necessary for creating a seamless user experience.</p>
+            <div class="button">
+                <a href="beta.html">Check out my Beta Description!</a>
+            </div>
+            <p>After the Beta Description, I moved on to the Beta Build. In this phase, I coded the improvements I had ideated in the Beta Description. I used HTML, CSS, and JavaScript to create a button that changes color when hovered over and clicked. I also applied JavaScript to change the text of the button when clicked. This was a challenging but rewarding experience that taught me a lot about the technical side of microinteractions.</p>
+            <div class="button">
+                <a href="beta/build.html">Check out my Beta Build!</a>
+            </div>
+            <p>For one final time, I wrote a Final Description. I prototyped the complete Book Tile in FIgma. I then described each microinteraction in depth.</p>
+            <div class="button">
                 <a href="https://www.figma.com/design/1djld8EU1RcqD4BB89qBuG/IDM241--Goodreads-Microinteractions?node-id=18-3&t=P6eJkudlI5RW4xiH-1">Check out my Figma Prototype!</a>
-                -->
+            </div>
+            <p>Finally, I coded the final project. </p>
+            <div class="button">
+                <a href="final/build.html">Check out my Final Build!</a>
+            </div>
             <h2>The Solution</h2>
+            <p>To address the identified issues with the Goodreads book tile, I implemented several key improvements designed to enhance the user experience while maintaining the platform's established branding and design language.</p>
+            <ol>
+                <li>Removal of the "Saving" State</li>
+                <p>The original "Want to Read" button included a "saving" state, which unnecessarily delayed the user's interaction. I removed this state entirely, allowing for a seamless and immediate response when the button is clicked. This change reduced friction and made the interaction feel faster and more intuitive.</p>
+                <li>Introduction of a Rating Reset Option</li>
+                <p>The lack of an option to remove a star rating posed a usability challenge. I added a new feature that allows users to deselect their rating, empowering them to correct mistakes or change their minds without feeling locked into a decision. This improvement supports user confidence and aligns with best practices for reversible actions in UX design.</p>
+                <li>Preservation of Goodreads Branding</li>
+                <p>To ensure consistency with Goodreads' existing design system, I extracted and adhered to their color palette, typography, and button styles. This attention to detail ensured that my redesigned elements felt native to the platform, maintaining a cohesive visual identity.</p>
+            </ol>
+            <p>The final solution combines intuitive interaction patterns, thoughtful improvements, and seamless integration with the existing platform design. Together, these enhancements create a user-friendly experience that prioritizes clarity, efficiency, and user empowerment.</p>
             <h2>The Results</h2>
             <!--<h2>The Reflection</h2>-->
         </div>
