--- a/idm241/case-study.html
+++ b/idm241/case-study.html
@@ -64,6 +64,7 @@
             </ol>
             <p>The final solution combines intuitive interaction patterns, thoughtful improvements, and seamless integration with the existing platform design. Together, these enhancements create a user-friendly experience that prioritizes clarity, efficiency, and user empowerment.</p>
             <h2>The Results</h2>
+            <p>Through the process of analyzing, ideating, and implementing improvements to the Goodreads book tile, I gained valuable insights into the complexities of microinteractions and their impact on user experience. By focusing on feedback, loops, and modes, I was able to create a more intuitive and engaging interface that aligns with best practices in UX design.</p>
             <!--<h2>The Reflection</h2>-->
         </div>
         <p>&nbsp;</p>
