--- a/idm241/case-study.html
+++ b/idm241/case-study.html
@@ -17,9 +17,9 @@
         </div>
         <div class="writing">
             <h2>The Overview</h2>
-            <p></p>
+            <p>For my IDM241 course, I designed and coded an interactive object as part of my coursework. Over 11 weeks, I focused on creating functional and engaging microinteractions. My project involved analyzing an interactive section of an existing website, ideating improvements, and coding them. The goal was to enhance the user experience and create a more intuitive interface.</p>
             <h2>Context and Challenge</h2>
-            <p>For this project, I designed and coded an interactive object as part of my coursework in IDM241- Microinteractions. Over 11 weeks, my focus was to create functional and engaging microinteractions. My design process included choosing an interactive section of an existing website, analyzing each microinteraction, ideating improvements, and, finally, coding them.</p>
+            <!--<p>For this project, I designed and coded an interactive object as part of my coursework in IDM241- Microinteractions. Over 11 weeks, my focus was to create functional and engaging microinteractions. My design process included choosing an interactive section of an existing website, analyzing each microinteraction, ideating improvements, and, finally, coding them.</p>-->
             <p>The interactive element I chose was a book tile from the <a href="https://www.goodreads.com/recommendations" target="_blank">recommendations page of Goodreads.</a> The current tile is functional, but there were minor annoyances that I had ideas to improve on.</p>
             <img src="case-study-problem.png" alt="Original Goodreads Interface" width="150px">
             <p>Pictured above are two spaces where I chose to improve on. The first is the “saving” state of the button. From the jump, I planned to completely remove this state. The “saving” state of this button is unnecessary because it causes the user to wait longer than needed for a quick action. The second area of improvement was the star rating. Once the user selects a rating, there is no way of going back and removing their rating. I decided to add a way for the user to remove their rating in my design. This will give the user confidence in their actions, knowing that they can take their action back.</p>
